# MLXMultimodal

./: .gitignore  README.md  error  getComputaResources.py  pyproject.toml  send.sh  ssh.sh
AB/: OfftheshelfencoderCustomdecoder.py  SynthDataset1.py
YP/: MultiModal_withpretain.py  multimodal_captioning.py
az/: borrow_clip_embeddings.py  borrow_vit_embeddings.py  build_dataset.py  encoder_decoder.py  mixing_vit_and_qwen.py  prepare_flikr30k.py
freemvmt/: 00_build_dataset.py  01_generate_captions.py  clip.ipynb  flickr.ipynb  main.py  pyproject.toml  qwen.ipynb
