[project]
name = "mlxmultimodal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "notebook>=7.4.4",
    "torch>=2.7.1",
 "torchvision>=0.22.1",
 "transformers>=4.53.0",
]

# see https://docs.astral.sh/uv/concepts/projects/workspaces/
[tool.uv.workspace]
members = ["freemvmt"]
