[project]
name = "freemvmt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "accelerate>=1.8.1",
  "datasets>=3.6.0",
  "evaluate>=0.4.4",
  "notebook>=7.4.4",
  "pandas>=2.3.0",
  "torch>=2.7.1",
  "torchvision>=0.22.1",
  "transformers>=4.53.0",
]
